--- a/accelerate-theme-child/style.css
+++ b/accelerate-theme-child/style.css
@@ -114,3 +114,56 @@ div.case-study-images img {
     display: inline;
     
 }
+
+/* Contact Us form */
+
+.ninja_forms {
+  width: 725px;
+  margin: 0 auto;
+}
+
+
+.main-content {
+    clear: both;
+}
+
+#nf-field-2-wrap, #nf-field-1-wrap {
+  width: 45%;
+  display: inline;
+  float: left;
+}
+
+#ninja_forms_field_1_div_wrap {
+  padding-right: 4%;
+}
+
+#ninja_forms_field_3_div_wrap {
+  width: 100%;
+}
+
+.submit-wrap {
+  width: 100%;
+}
+
+/*
+#nf-field-1-container {
+    width: 50%;
+    float: left;
+    display: inline;
+}
+
+
+#nf-field-2-container {
+    width: 50%;
+    float: left;
+    display: inline;
+} 
+*/
+textarea { 
+    resize: none; 
+}
+
+#nf-field-4 {
+    background-color:  #45ac9d;
+    float: right;
+}
